Update 7.02 Conduct logging and monitoring activities.md

--- a/DOMAIN7: Security Operations/7.02 Conduct logging and monitoring activities.md
+++ b/DOMAIN7: Security Operations/7.02 Conduct logging and monitoring activities.md
@@ -261,12 +261,12 @@ The following diagram shows how Syslog messages flow through a typical enterpris
 ```mermaid
 
 flowchart LR
-    A[Router / Switch / Firewall] -->|Syslog UDP 514| B(Syslog Server)
-    C[Application Server] -->|Syslog TCP/TLS| B
-    D[Linux/Unix Host] -->|Rsyslog / Syslog-ng| B
-    B -->|Log Forwarding / API| E[SIEM - e.g., Splunk, QRadar, ELK]
-    E -->|Correlation & Alerts| F[Security Analysts / SOC]
-    F -->|Incident Response| G[Remediation Actions]
+    A["Router / Switch / Firewall"] -->|"Syslog UDP 514"| B["Syslog Server"]
+    C["Application Server"] -->|"Syslog TCP/TLS"| B
+    D["Linux/Unix Host"] -->|"Rsyslog / Syslog-ng"| B
+    B -->|"Log Forwarding / API"| E["SIEM - e.g., Splunk, QRadar, ELK"]
+    E -->|"Correlation & Alerts"| F["Security Analysts / SOC"]
+    F -->|"Incident Response"| G["Remediation Actions"]
 
     style A fill:#ffffff,stroke:#000,stroke-width:1px
     style C fill:#ffffff,stroke:#000,stroke-width:1px
@@ -275,6 +275,7 @@ flowchart LR
     style E fill:#f9f9f9,stroke:#000,stroke-width:1px
     style F fill:#ffffff,stroke:#000,stroke-width:1px
     style G fill:#ffffff,stroke:#000,stroke-width:1px
+
 ```
 
 
@@ -632,15 +633,15 @@ Hunters look for:
 ```mermaid
 
 graph LR
-    A[Threat Intelligence] --> B[Threat Feeds]
-    A --> C[Threat Hunting]
+    A["Threat Intelligence"] --> B["Threat Feeds"]
+    A --> C["Threat Hunting"]
     
-    A:::main --> D[Goal: Understand adversaries and their methods]
-    B:::feed --> E[Collection of data about threats such as IPs, hashes, domains]
-    C:::hunt --> F[Proactive search for undetected threats in the environment]
+    A:::main --> D["Goal: Understand adversaries and their methods"]
+    B:::feed --> E["Collection of data about threats such as IPs, hashes, domains"]
+    C:::hunt --> F["Proactive search for undetected threats in the environment"]
 
-    B --> G[Used by SIEMs, IDS, IPS, Firewalls for automatic detection]
-    C --> H[Relies on threat intelligence to form hypotheses and identify patterns]
+    B --> G["Used by SIEMs, IDS, IPS, Firewalls for automatic detection"]
+    C --> H["Relies on threat intelligence to form hypotheses and identify patterns"]
 
     classDef main fill:#555,stroke:#000,stroke-width:2px,color:#fff
     classDef feed fill:#777,stroke:#333,stroke-width:1px,color:#fff
@@ -726,16 +727,16 @@ The Process of UEBA Implementation is basically made of 5 steps:
 
 ```mermaid
 flowchart LR
-    A[1. Data Collection] --> B[2. Data Normalization]
-    B --> C[3. Behavior Profiling]
-    C --> D[4. Anomaly Detection]
-    D --> E[5. Alert and Response]
+    A["1. Data Collection"] --> B["2. Data Normalization"]
+    B --> C["3. Behavior Profiling"]
+    C --> D["4. Anomaly Detection"]
+    D --> E["5. Alert and Response"]
 
-    A:::step --> A1[Gather logs, network traffic, authentication data and device behavior]
-    B:::step --> B1[Clean and standardize data for consistent analysis]
-    C:::step --> C1[Build user and entity profiles from historical normal behavior]
-    D:::step --> D1[Monitor for deviations from normal patterns in real time]
-    E:::step --> E1[Trigger alerts and allow analysts to investigate and respond]
+    A:::step --> A1["Gather logs, network traffic, authentication data and device behavior"]
+    B:::step --> B1["Clean and standardize data for consistent analysis"]
+    C:::step --> C1["Build user and entity profiles from historical normal behavior"]
+    D:::step --> D1["Monitor for deviations from normal patterns in real time"]
+    E:::step --> E1["Trigger alerts and allow analysts to investigate and respond"]
 
     classDef step fill:#999,stroke:#333,stroke-width:1px,color:#fff
     style A1 fill:#eee,stroke:#666,color:#000
@@ -743,6 +744,7 @@ flowchart LR
     style C1 fill:#eee,stroke:#666,color:#000
     style D1 fill:#eee,stroke:#666,color:#000
     style E1 fill:#eee,stroke:#666,color:#000
+
 ```
 
 UEBA adds value to an organization’s security posture by shifting the focus away from just detecting known threats to identifying potential zero-day exploits, insider threats, and compromised accounts. Some of the key areas where UEBA excels include:
