Update 7.03 Perform Configuration Management (CM) (e.g., provisioning, baselining, automation).md

--- a/DOMAIN7: Security Operations/7.03 Perform Configuration Management (CM) (e.g., provisioning, baselining, automation).md
+++ b/DOMAIN7: Security Operations/7.03 Perform Configuration Management (CM) (e.g., provisioning, baselining, automation).md
@@ -31,28 +31,28 @@ A CMP ensures every adjustment is documented, tested, and deliberate — not jus
 ```mermaid
 
 flowchart TD
-    A[Configuration Management]:::main --> B[Configuration Items]:::mid
-    A --> C[Configuration Management Plan]:::mid
-    A --> D[Security and Control Benefits]:::mid
+    A["Configuration Management"]:::main --> B["Configuration Items"]:::mid
+    A --> C["Configuration Management Plan"]:::mid
+    A --> D["Security and Control Benefits"]:::mid
 
     %% Configuration Items
-    B --> B1[Servers]:::detail
-    B --> B2[Network switches]:::detail
-    B --> B3[Databases and applications]:::detail
-    B --> B4[Firewall rules]:::detail
-    B --> B5[Configuration documents]:::detail
+    B --> B1["Servers"]:::detail
+    B --> B2["Network switches"]:::detail
+    B --> B3["Databases and applications"]:::detail
+    B --> B4["Firewall rules"]:::detail
+    B --> B5["Configuration documents"]:::detail
 
     %% Configuration Management Plan
-    C --> C1[Defines which CIs are included]:::detail
-    C --> C2[Describes change review and approval process]:::detail
-    C --> C3[Establishes baselines and version control]:::detail
-    C --> C4[Keeps records accurate and up to date]:::detail
+    C --> C1["Defines which CIs are included"]:::detail
+    C --> C2["Describes change review and approval process"]:::detail
+    C --> C3["Establishes baselines and version control"]:::detail
+    C --> C4["Keeps records accurate and up to date"]:::detail
 
     %% Benefits
-    D --> D1[Ensures traceability of every change]:::detail
-    D --> D2[Supports auditability and accountability]:::detail
-    D --> D3[Prevents unauthorized or quick modifications]:::detail
-    D --> D4[Maintains stability during constant evolution]:::detail
+    D --> D1["Ensures traceability of every change"]:::detail
+    D --> D2["Supports auditability and accountability"]:::detail
+    D --> D3["Prevents unauthorized or quick modifications"]:::detail
+    D --> D4["Maintains stability during constant evolution"]:::detail
 
     %% Styles
     classDef main fill:#444,stroke:#000,stroke-width:2px,color:#fff
@@ -61,6 +61,7 @@ flowchart TD
 
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+
 ```
 
 **Provisioning** is the act of setting up IT resources — servers, user accounts, cloud instances — according to predefined standards. Imagine provisioning like opening a new restaurant:
