Update 7.04 Apply foundational security operations concepts.md

--- a/DOMAIN7: Security Operations/7.04 Apply foundational security operations concepts.md
+++ b/DOMAIN7: Security Operations/7.04 Apply foundational security operations concepts.md
@@ -224,14 +224,14 @@ flowchart LR
     classDef greyNode fill:#f2f2f2,stroke:#666,color:#333;
     classDef greyArrow stroke:#666;
 
-    A[Privileged Account Management - PAM]:::greyNode --> B[Controls, monitors, secures, audits privileged accounts]:::greyNode
-    A --> C[High-value targets: admin, root, service, domain accounts]:::greyNode
+    A["Privileged Account Management - PAM"]:::greyNode --> B["Controls, monitors, secures, audits privileged accounts"]:::greyNode
+    A --> C["High-value targets: admin, root, service, domain accounts"]:::greyNode
 
-    subgraph AccountTypes [Privileged Account Types]
-        D[Administrator accounts]:::greyNode -->|Full system/data access| C
-        E[Service accounts]:::greyNode -->|Run apps; often unmanaged| C
-        F[Root accounts]:::greyNode -->|Unlimited system power| C
-        G[Domain Admin accounts]:::greyNode -->|Control entire AD environment| C
+    subgraph AccountTypes["Privileged Account Types"]
+        D["Administrator accounts"]:::greyNode -->|"Full system/data access"| C
+        E["Service accounts"]:::greyNode -->|"Run apps; often unmanaged"| C
+        F["Root accounts"]:::greyNode -->|"Unlimited system power"| C
+        G["Domain Admin accounts"]:::greyNode -->|"Control entire AD environment"| C
     end
 
 ```
