Update 7.05 Apply resource protection.md

--- a/DOMAIN7: Security Operations/7.05 Apply resource protection.md
+++ b/DOMAIN7: Security Operations/7.05 Apply resource protection.md
@@ -78,15 +78,16 @@ The media lifecycle consists of:
 
 ```mermaid
 flowchart LR
-    A[Creation] -->|Media is procured or created for use<br> e.g., USB drives, tapes, smartphones| B[Use]
-    B[Use] -->|Media stores data and is actively used within systems| C[Transport]
-    C[Transport] -->|Media may be moved between departments, sites, or even countries| D[Storage]
-    D[Storage] -->|Media may be retained for compliance or future use| E[Sanitization]
-    E[Sanitization] -->|Data is securely removed when media is retired| F[Disposal]
-    F[Disposal] -->|Media is destroyed or recycled,<br>ensuring data is unrecoverable| G[End of Lifecycle]
+    A["Creation"] -->|"Media is procured or created for use<br> e.g., USB drives, tapes, smartphones"| B["Use"]
+    B["Use"] -->|"Media stores data and is actively used within systems"| C["Transport"]
+    C["Transport"] -->|"Media may be moved between departments, sites, or even countries"| D["Storage"]
+    D["Storage"] -->|"Media may be retained for compliance or future use"| E["Sanitization"]
+    E["Sanitization"] -->|"Data is securely removed when media is retired"| F["Disposal"]
+    F["Disposal"] -->|"Media is destroyed or recycled,<br>ensuring data is unrecoverable"| G["End of Lifecycle"]
 
 classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
-    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+
 ```
 
 A single weak point in this cycle — especially during transport, reuse, or disposal — can unravel your entire security program. Understanding each phase lets you apply the right protection method at the right time.
