Update 7.Q.1 Easy Questions.md

--- a/DOMAIN7: Security Operations/7.Q.1 Easy Questions.md
+++ b/DOMAIN7: Security Operations/7.Q.1 Easy Questions.md
@@ -1,4 +1,4 @@
-## Easy Questions ##
+## 7.Q.1 Easy Questions ##
 
 1. After conducting an internal audit, your organization discovers that its current security measures are insufficient for effectively investigating and responding to incidents involving unauthorized access to sensitive information. Which strategy would be the most effective to implement to enhance accountability and streamline investigations in the event of a security breach?
 
