Update 7.Q.2 Hard Questions.md

--- a/DOMAIN7: Security Operations/7.Q.2 Hard Questions.md
+++ b/DOMAIN7: Security Operations/7.Q.2 Hard Questions.md
@@ -1,4 +1,4 @@
-## Hard Questions ##
+## 7.Q.2 Hard Questions ##
 
 1. As a security engineer, you are tasked with making the active IDS function as an Intrusion Prevention System (IPS) while following best practices outlined in NIST SP 800-94. According to NIST SP 800-94, which of the following is a key requirement for making an active IDS function as an IPS?
 
