Update 8.2 - Identify and apply security controls in software development ecosystems.md

--- a/DOMAIN8: Software Development Security/8.2 - Identify and apply security controls in software development ecosystems.md
+++ b/DOMAIN8: Software Development Security/8.2 - Identify and apply security controls in software development ecosystems.md
@@ -242,7 +242,7 @@ Think of the CI/CD pipeline like an assembly line in a car factory. Each stageâ€
 %%{init: {"theme": "base", "themeVariables": { "primaryColor": "#f5f5f5", "edgeLabelBackground":"#e0e0e0", "fontSize":"14px", "primaryTextColor":"#222", "lineColor":"#999", "nodeBorder":"#ccc", "mainBkg":"#fafafa"}}}%%
 flowchart TD
 
-    subgraph CI["Continuous Integration - CI"]
+    subgraph "CI"["Continuous Integration - CI"]
         A1["Developers commit code frequently"]
         A2["Automated build, tests, static analysis"]
         A3["Detect bugs and vulnerabilities early"]
@@ -252,7 +252,7 @@ flowchart TD
         A1 --> A2 --> A3 --> A4 --> A5
     end
 
-    subgraph CD["Continuous Delivery and Deployment - CD"]
+    subgraph "CD"["Continuous Delivery and Deployment - CD"]
         B1["Software always deployable"]
         B2["Automated or manual release"]
         B3["Risk of attacker modifying infrastructure or stealing secrets"]
@@ -262,7 +262,7 @@ flowchart TD
         B1 --> B2 --> B3 --> B4 --> B5
     end
 
-    subgraph SECURITY["Security in the CI/CD Pipeline"]
+    subgraph "SECURITY"["Security in the CI/CD Pipeline"]
         C1["Shift security left through SAST, SCA, and container scans"]
         C2["Block builds with known vulnerabilities"]
         C3["Verify dependencies and open-source integrity"]
@@ -272,7 +272,7 @@ flowchart TD
         C1 --> C2 --> C3 --> C4 --> C5
     end
 
-    subgraph ANALOGY["Assembly Line Analogy"]
+    subgraph "ANALOGY"["Assembly Line Analogy"]
         D1["The software pipeline works like a factory line"]
         D2["Each stage adds value or checks for defects"]
         D3["Weak checks allow vulnerabilities to reach production"]
