Update 8.D.1 Databases Basics.md

--- a/DOMAIN8: Software Development Security/8.D.1 Databases Basics.md
+++ b/DOMAIN8: Software Development Security/8.D.1 Databases Basics.md
@@ -41,13 +41,15 @@ Hierarchical databases are fast and predictable but rigid—if your relationship
 
 ```mermaid
 graph TD
-  A[Company]
-  A --> B[Department A]
-  A --> C[Department B]
-  B --> D[Team 1]
-  B --> E[Team 2]
-    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
-    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+  A["Company"]
+  A --> B["Department A"]
+  A --> C["Department B"]
+  B --> D["Team 1"]
+  B --> E["Team 2"]
+
+classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+
 ```
 
 #### Network Database #### 
@@ -68,11 +70,13 @@ Today’s most common type: data is stored in tables made of rows and columns. T
 
 ```mermaid
 graph TD
-  TableA[Customers]
-  TableB[Orders]
+  TableA["Customers"]
+  TableB["Orders"]
   TableA -->|customer_id| TableB
-    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
-    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+
+classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+
 ```
 
 #### Object-Oriented Database ####
@@ -92,8 +96,8 @@ classDiagram
     +calculateTotal()
   }
 
-  classDef default fill:#f0f0f0,color:#000000,stroke:#444444,stroke-width:1px
-  classDef node fill:#e0e0e0,color:#000000,stroke:#666666,stroke-width:1px
+classDef default fill:#f0f0f0,color:#000000,stroke:#444444,stroke-width:1px
+classDef node fill:#e0e0e0,color:#000000,stroke:#666666,stroke-width:1px
 
 ```
 
@@ -113,12 +117,13 @@ Here’s a simple graph model for a graph database example:
 
 ```mermaid
 graph LR
-  Alice((Alice))
-  Bob((Bob))
+  Alice(("Alice"))
+  Bob(("Bob"))
   Alice -->|FRIEND| Bob
-  Bob -->|FRIEND| Charlie((Charlie))
-    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
-    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+  Bob -->|FRIEND| Charlie(("Charlie"))
+
+classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
 ```
 
 These are great for unstructured or semi-structured data, scalability, and special use cases like building social networks or managing logs.
@@ -143,8 +148,10 @@ graph TB
   MultiDB --> Relational
   MultiDB --> Document
   MultiDB --> Graph
+
 classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
-    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+
 ```
 
 The following table recap all that we have seen so far.
