--- a/DOMAIN8: Software Development Security/8.Q.2 Hard Questions.md
+++ b/DOMAIN8: Software Development Security/8.Q.2 Hard Questions.md
@@ -1,4 +1,4 @@
-## Hard Questions ##
+## 8.Q.2 Hard Questions ##
 
 1. Your company has just purchased a new software solution to manage sensitive customer data. As the cybersecurity lead, you are responsible for securing the software during installation. Which of the following are standard security hardening steps you should follow when installing the new software? (Choose all that apply)
 
