Update 1.09 Understand and apply risk management concepts.md

--- a/DOMAIN1: Security and Risk Management/1.09 Understand and apply risk management concepts.md
+++ b/DOMAIN1: Security and Risk Management/1.09 Understand and apply risk management concepts.md
@@ -21,35 +21,31 @@ By weaving together these concepts, a risk-based strategy becomes a living proce
 
 ## 1.9.1 Threat and vulnerability identification ##
 
-Threats are potential events that may lead to undesired outcomes for a specific asset, whether intentional or accidental. Think of threats as dangers that could harm a target, similar to a weapon. Vulnerabilities represent weaknesses in an asset or the absence of safeguards, such as flaws, limitations, or errors, making it susceptible to harm.
-Threats and vulnerabilities are interrelated: a threat becomes feasible when a vulnerability exists. Threats exploit vulnerabilities, leading to exposure, which is the risk. Safeguards mitigate risks by protecting assets from threats. Threat agents intentionally exploit vulnerabilities, while threat events encompass both accidental occurrences and intentional exploitation of vulnerabilities. Threat vectors, also known as attack vectors, are the paths or means by which an attack gains access to a target to cause harm.
-Exposure refers to susceptibility to asset loss due to threats, representing the potential for harm. The quantitative risk analysis value of exposure factor (EF) is derived from this concept. Risk is the likelihood that a threat will exploit a vulnerability to cause harm to an asset and the severity of potential damage. The higher the potential harm, the greater the risk.
-
-```mermaid
 flowchart LR
-  Asset[Asset]
-  Threat[Threat]
-  Vulnerability[Vulnerability]
-  ThreatAgent[Threat Agent]
-  AttackVector[Threat / Attack Vector]
-  ThreatEvent[Threat Event]
-  Exposure[Exposure Factor]
-  Safeguard[Safeguard / Control]
-  Risk[Risk]
+  Asset["Asset"]
+  Threat["Threat"]
+  Vulnerability["Vulnerability"]
+  ThreatAgent["Threat Agent"]
+  AttackVector["Threat / Attack Vector"]
+  ThreatEvent["Threat Event"]
+  Exposure["Exposure Factor"]
+  Safeguard["Safeguard / Control"]
+  Risk["Risk"]
 
-  ThreatAgent -->|uses| AttackVector
-  AttackVector -->|exploits| Vulnerability
-  Vulnerability -->|affects| Asset
-  Threat -->|becomes feasible when| Vulnerability
-  ThreatEvent -->|occurs when| ThreatAgent
-  ThreatEvent -->|causes| Exposure
-  Exposure -->|influences| Risk
-  Safeguard -.reduces.-> Vulnerability
-  Safeguard -.reduces.-> Exposure
-  Risk -->|is likelihood × severity| Asset
+  ThreatAgent -->|"uses"| AttackVector
+  AttackVector -->|"exploits"| Vulnerability
+  Vulnerability -->|"affects"| Asset
+  Threat -->|"becomes feasible when"| Vulnerability
+  ThreatEvent -->|"occurs when"| ThreatAgent
+  ThreatEvent -->|"causes"| Exposure
+  Exposure -->|"influences"| Risk
+  Safeguard -. "reduces" .-> Vulnerability
+  Safeguard -. "reduces" .-> Exposure
+  Risk -->|"is likelihood × severity"| Asset
 
-    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
-    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+  classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+  classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+
 ```
 
 :link: [NIST SP 800-30r1](https://csrc.nist.gov/pubs/sp/800/30/r1/final) provides a list of threat categories, concepts and examples 
@@ -182,15 +178,16 @@ While it's impossible to completely eliminate risk, it can be managed through va
 
 ```mermaid
 flowchart TD
-  Risk[Risk: unavoidable possibility of harm] --> Decision{Choose a response strategy}
+  Risk["Risk: unavoidable possibility of harm"] --> Decision{"Choose a response strategy"}
   
-  Decision --> Avoidance[Avoidance<br>— cease risky activity<br> - opportunity cost]
-  Decision --> Transfer[Transfer<br>— share risk - e.g. insurance]
-  Decision --> Mitigation[Mitigation<br>— implement controls to reduce risk]
-  Decision --> Acceptance[Acceptance<br>— accept residual risk<br>— take no further action]
+  Decision --> Avoidance["Avoidance\n— cease risky activity\n- opportunity cost"]
+  Decision --> Transfer["Transfer\n— share risk - e.g. insurance"]
+  Decision --> Mitigation["Mitigation\n— implement controls to reduce risk"]
+  Decision --> Acceptance["Acceptance\n— accept residual risk\n— take no further action"]
 
-    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
-    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+  classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+  classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+
 ```
 
 :brain: Remember the 4 terms above: avoidance, transfer, mitigation, acceptance but be aware that during your exam and your career you’ll find many synonyms.
@@ -489,20 +486,22 @@ Security controls must offer measurable benefits to justify their implementation
 
 ```mermaid
 flowchart LR
-    A(Risk Exists) --> B{Can control be measured/evaluated?}
-    B -- No --> C[Don’t implement or reconsider control]
-    B -- Yes --> D{Native monitoring?}
-    D -- Yes --> E[Use built‑in metrics/events]
-    D -- No --> F[Deploy external monitoring mechanisms]
-    E & F --> G[Collect metrics pre‑ and post‑control]
-    G --> H[Measure improvement e.g., incident rate ↓]
-    H --> I[Calculate cost‑effectiveness]
-    I --> J{Is benefit > cost?}
-    J -- Yes --> K[Keep & refine control]
-    J -- No --> L[Redesign or replace control]
+    A["Risk Exists"] --> B{"Can control be measured/evaluated?"}
+    B -- "No" --> C["Don’t implement or reconsider control"]
+    B -- "Yes" --> D{"Native monitoring?"}
+    D -- "Yes" --> E["Use built-in metrics/events"]
+    D -- "No" --> F["Deploy external monitoring mechanisms"]
+    E --> G["Collect metrics pre- and post-control"]
+    F --> G
+    G --> H["Measure improvement e.g., incident rate ↓"]
+    H --> I["Calculate cost-effectiveness"]
+    I --> J{"Is benefit > cost?"}
+    J -- "Yes" --> K["Keep & refine control"]
+    J -- "No" --> L["Redesign or replace control"]
 
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+
 ```
 
 👔 *Implement and forget* is definetely a bad approach with security countermeasures.
@@ -650,28 +649,29 @@ Risk analysis serves to inform upper management about risk mitigation strategies
 
 ```mermaid
 flowchart TD
-  A[Risk Analysis] --> B[Identify & quantify risks]
-  B --> C[Compare potential asset loss vs. safeguard cost]
-  C --> D{Management decisions}
-  D -->|Transfer/Deterrence/Avoid/Acept| E[Select mitigation strategy]
-  E --> F[Inform budget & align with business goals]
+  A["Risk Analysis"] --> B["Identify & quantify risks"]
+  B --> C["Compare potential asset loss vs. safeguard cost"]
+  C --> D{"Management decisions"}
+  D -->|"Transfer/Deterrence/Avoid/Acept"| E["Select mitigation strategy"]
+  E --> F["Inform budget & align with business goals"]
 
-  F --> G[Track & Update Risk Assessments periodically]
-  G --> H[Continuous Improvement in Risk Posture]
+  F --> G["Track & Update Risk Assessments periodically"]
+  G --> H["Continuous Improvement in Risk Posture"]
 
-  F --> I[Evaluate ERM effectiveness via RMM]
-  I --> J{Determine maturity level}
-  J --> L[Ad Hoc: chaotic]
-  J --> M[Preliminary: initial, siloed]
-  J --> N[Defined: framework adopted]
-  J --> O[Integrated: metrics & KRIs core]
-  J --> P[Optimized: proactive, strategic]
+  F --> I["Evaluate ERM effectiveness via RMM"]
+  I --> J{"Determine maturity level"}
+  J --> L["Ad Hoc: chaotic"]
+  J --> M["Preliminary: initial, siloed"]
+  J --> N["Defined: framework adopted"]
+  J --> O["Integrated: metrics & KRIs core"]
+  J --> P["Optimized: proactive, strategic"]
 
-  J --> Q[Use RMM to track progress over time]
+  J --> Q["Use RMM to track progress over time"]
   Q --> H
 
-    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
-    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+  classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+  classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+
 ```
 
 EOL, or end of life, marks the cessation of manufacturing, marketing, and sales of equipment by the OEM. Following EOL, limited development of firmware and software updates occurs, with post-warranty maintenance available at a higher cost for a limited period. EOS, or end of sale, is the point at which the OEM stops selling the equipment, often used interchangeably with EOL. 
@@ -746,18 +746,52 @@ Third-party maintenance providers can offer cost-effective solutions for maintai
 
 A risk framework serves as a structured approach outlining how risks are assessed, addressed, and monitored. Notably, NIST has established two pivotal frameworks: the Risk Management Framework (RMF) and the Cybersecurity Framework (CSF). The CSF provides guidelines for mitigating cybersecurity risks within organizations, drawing upon existing standards, guidelines, and practices. On the other hand, the RMF functions as a risk management process designed to identify and respond to threats, delineated across three core Special Publications: SP 800-37 Rev 2, SP 800-39, and SP 800-30 Rev 1. The RMF encompasses seven steps and six cyclical phases, beginning with preparation at both organizational and system levels and culminating in continuous monitoring to assess control effectiveness and report on the system's security and privacy posture.
 
-:link: The NIST Risk Management Framework (RMF) provides a process that integrates security, privacy, and cyber supply chain risk management activities into the system development life cycle: https://csrc.nist.gov/projects/risk-management/about-rmf
+:link: [The NIST Risk Management Framework](https://csrc.nist.gov/projects/risk-management/about-rmf) provides a process that integrates security, privacy, and cyber supply chain risk management activities into the system development life cycle 
 
 The CSF revolves around a core framework comprising five functions: Identify, Protect, Detect, Respond, and Recover. Rather than a mere checklist or procedural guide, it serves as a directive for ongoing operational activities aimed at enhancing security progressively. Rather than constituting a standalone risk management process or security infrastructure, the CSF functions as an enhancement system.
+
+**COBIT** is a framework that helps organizations make sure their IT and security activities support business goals instead of operating in isolation. In simple terms, it provides a structured way for management to decide what IT should achieve, how risks should be managed, and how performance should be measured. COBIT focuses on governance, meaning that leadership defines direction and risk tolerance, while IT and security teams implement and operate the necessary controls. The goal is to ensure that technology delivers value, risks are controlled, responsibilities are clear, and the organization can demonstrate that IT investments are aligned with business needs.
+The COBIT framework is built around six governance system principles. In plain English, they mean the following:
+
+- Provide stakeholder value – IT and security activities must create value for the business by balancing benefits, risks, and costs. Technology exists to support business objectives, not as an end in itself.
+
+- Holistic approach – Effective governance requires more than processes. People, technology, information, culture, policies, and organizational structures must all work together.
+
+- Dynamic governance system – Governance is not static. The system must adapt when business goals, risks, regulations, or technologies change.
+
+- Governance distinct from management – Leadership sets direction, priorities, and risk tolerance (governance), while management plans, builds, runs, and monitors activities to achieve those objectives.
+
+- Tailored to enterprise needs – There is no one-size-fits-all implementation. COBIT should be adapted based on the organization’s size, industry, risk profile, and strategy.
+
+- End-to-end governance system – Governance applies across the entire organization, covering all information and technology, not just the IT department.
+
+**SABSA (Sherwood Applied Business Security Architecture)** is a security architecture framework that helps organizations design security starting from business needs rather than from technology. In simple terms, SABSA ensures that security controls exist because they support business objectives, protect business value, and manage risk in a structured and traceable way. Instead of beginning with tools or technical solutions, SABSA starts by asking what the business is trying to achieve, what needs protection, and what risks could prevent success, and then builds security architecture layer by layer to support those goals.
+
+The key aspects of SABSA are:
+
+- Business-driven security – Security requirements originate from business goals, risk appetite, and operational needs rather than technical preferences.
+
+- Layered architecture – Security is designed across multiple layers (contextual, conceptual, logical, physical, and operational), moving from business requirements to implementation.
+
+- Traceability – Every security control can be traced back to a specific business requirement or risk.
+
+- Risk-focused approach – Security decisions are based on risk management and business impact.
+
+- Lifecycle integration – Security architecture supports the full lifecycle, including design, implementation, operation, and continuous improvement.
+
+- Alignment with enterprise architecture – Security becomes part of overall enterprise architecture rather than a separate function.
 
 The following table recaps some Risk Management Frameworks you should remember:
 
 | Framework                  | Description                                                                                                   |
 |---------------------------|---------------------------------------------------------------------------------------------------------------|
-| **NIST SP 800‑37**        | Describes the **Risk Management Framework (RMF)** and provides structured guidelines to identify, assess, select, implement, and continuously monitor controls across information systems and organizations. |
-| **ISO 31000**             | A family of international standards offering a principles-based, enterprise-wide approach for managing *any type of risk*. Widely applicable across industries and focuses on integrating risk management into governance and operations. |
+| **NIST SP 800-37**        | Describes the **Risk Management Framework (RMF)** and provides structured guidelines to identify, assess, select, implement, and continuously monitor controls across information systems and organizations. |
+| **ISO 31000**             | A family of international standards offering a principles-based, enterprise-wide approach for managing *any type of risk*. Widely applicable across industries and focuses on integrating risk management into governance and operations. |
 | **COSO ERM**              | Defines essential enterprise risk management components, principles, and concepts. Frequently used to align governance, risk, and performance at the board and organizational level, especially in regulated industries. |
-| **ISACA Risk IT Framework** | Provides a structured methodology to identify, manage, and optimize IT-related risk tied to enterprise value. Closely aligned with COBIT and focused on integrating business context, risk appetite, and decision-making. |
+| **ISACA Risk IT Framework** | Provides a structured methodology to identify, manage, and optimize IT-related risk tied to enterprise value. Closely aligned with COBIT and focused on integrating business context, risk appetite, and decision-making. |
+| **COBIT**                 | A governance and management framework for enterprise IT that ensures information and technology support business objectives, deliver value, and manage risk effectively. It defines governance principles, processes, and performance measurement to align IT activities with organizational goals. |
+| **SABSA**                 | A business-driven security architecture framework that translates business requirements and risk into structured security architecture layers. It ensures that security controls are traceable to business objectives and integrated into enterprise architecture throughout the lifecycle. |
+
 
 ### Open Questions ###
 
