Update 1.09 Understand and apply risk management concepts.md

--- a/DOMAIN1: Security and Risk Management/1.09 Understand and apply risk management concepts.md
+++ b/DOMAIN1: Security and Risk Management/1.09 Understand and apply risk management concepts.md
@@ -21,6 +21,7 @@ By weaving together these concepts, a risk-based strategy becomes a living proce
 
 ## 1.9.1 Threat and vulnerability identification ##
 
+```mermaid
 flowchart LR
   Asset["Asset"]
   Threat["Threat"]
